--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
     </head>
     <body>
         <div class="links">
-            <a href="https://github.com/Lazack28">OWNER ON GITHUB</a>
-            <a href="https://github.com/Lazack28/Lazack-Device">BEST WHATSAPP BOT</a>
-            <a href="https://creds-1.onrender.com/pair">PAIRING CODE</a>
-            <a href="https://replit.com/@lazck22/LAZACK-ADVANCE-AND-DEVICE">PAIRING CODE 002</a>
-            <a href="https://chat.whatsapp.com/IIpL6gf6dcq4ial8gaJLE9">WHATSAPP</a>
-            <a href="https://wa.me/255734980103">OWNER</a>
+            <a href="https://github.com/Mselachui03">OWNER ON GITHUB</a>
+            <a href="https://github.com/Mselachui03/MSELA-CHUI-V3">BEST WHATSAPP BOT</a>
+            <a href="https://session-tg08.onrender.com">PAIRING CODE</a>
+            <a href="https://session-tg08.onrender.com">PAIRING CODE 002</a>
+            <a href="https://chat.whatsapp.com/Bqb6oEUxAneAqxBUBfNdLr">WHATSAPP</a>
+            <a href="https://wa.me/260774358600">OWNER</a>
         </div>
     </body>
 </html>
