--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             <a href="https://github.com/Mselachui03/MSELA-CHUI-V3">BEST WHATSAPP BOT</a>
             <a href="https://session-tg08.onrender.com">PAIRING CODE</a>
             <a href="https://session-tg08.onrender.com">PAIRING CODE 002</a>
+            <a href="https://whatsapp.com/channel/0029VakhqAaLtOjBJOL9Wn1q">CHANNEL</a>
             <a href="https://chat.whatsapp.com/Bqb6oEUxAneAqxBUBfNdLr">WHATSAPP</a>
             <a href="https://wa.me/260774358600">OWNER</a>
         </div>
