--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, install-scale=1">
         <meta rel="icon" type="image/png" sizes="32" href="./lazack.png">
-        <title>LAZACK ORGANISATION</title>
+        <title>MSELACHUI ORGANISATION</title>
 
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Roboto&display:wght@200;300;400;500;600;700;800;900&display=swap');
